Correct wrong margin

--- a/data/themes/darktable.css
+++ b/data/themes/darktable.css
@@ -1332,7 +1332,7 @@ filechooser row:hover .sidebar-icon
 
 #collect-header-box button
 {
-  margin-left: 0;
+  margin-right: 0;
 }
 
 /*------------
